# aibo_ros

./: LICENSE  README.md
aibo_description/: CMakeLists.txt
aibo_description/urdf/: Aibo.urdf
aibo_server/: CMakeLists.txt  package.xml
aibo_server/urbiserver-aibo/MS-ERS7/: CLIENT.INI  LICENSE  URBI.INI  chat.u  compat.u  custom.u  dance.u  dance2.u  ers210.ini  ers210.u  ers220.ini  ers220.u  ers7.ini  ers7.u  foundtoy.u  motion.u  playrec.u  std.u  swalk.u  swnobsta.u  swpatt.u  swtrans.u  testcpu.u
aibo_server/urbiserver-aibo/MS-ERS7/OPEN-R/: BOOTPARA  VERSION.txt
aibo_server/urbiserver-aibo/MS-ERS7/OPEN-R/MW/CONF/: CONNECT.CFG  DESIGN.CFG  DESIGNDB.CFG  OBJECT.CFG  PASSWD
aibo_server/urbiserver-aibo/MS-ERS7/OPEN-R/MW/DATA/P/: readme.txt
aibo_server/urbiserver-aibo/MS-ERS7/OPEN-R/SYSTEM/: VERSION
aibo_server/urbiserver-aibo/MS-ERS7/OPEN-R/SYSTEM/CONF/: CARDDRV.CFG  EMON.CFG  EXTOBJ.CFG  OBJECT.CFG  WLANDFLT.TXT
